--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,8 @@
 # gem "pg"
 #
 default: &default
+  username: postgres
+  password: n673927826
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
